Update CLASS 1 -12(INTRO to ESCAPE SEQUENCE) CHAPTER=1.ipynb

--- a/CLASS 1 -12(INTRO to ESCAPE SEQUENCE) CHAPTER=1.ipynb
+++ b/CLASS 1 -12(INTRO to ESCAPE SEQUENCE) CHAPTER=1.ipynb
@@ -61,7 +61,7 @@
       "hello \"world\"world\n",
       "line A\n",
       "line B\n",
-      "name\tIsha\n",
+      "name\tsameer\n",
       "this is backslash\\\\\n",
       "hell\blo\n"
      ]
@@ -70,7 +70,7 @@
    "source": [
     "print(\"hello \\\"world\\\"world\")\n",
     "print(\"line A\\nline B\")\n",
-    "print(\"name\\tIsha\")\n",
+    "print(\"name\\tsameer\")\n",
     "print(\"this is backslash\\\\\\\\\")\n",
     "print(\"hell\\blo\")"
    ]
